--- a/style.css
+++ b/style.css
@@ -57,11 +57,11 @@ nav ul {
 }
 
 .nav-left {
-    margin-right: auto; /* Aligns to the left */
+    width: 75%
 }
 
 .nav-right {
-    margin-left: auto; /* Aligns to the right */
+    width: 25%
 }
 
 nav ul li {
