--- a/style.css
+++ b/style.css
@@ -171,3 +171,15 @@ input:focus{
     color: #1877f2;
   }
 
+
+@media (max-width: 400px){
+    .form-container{
+        background-color: red;
+    }
+    .content-left{
+        width: 100%;
+    }
+    .content-right{
+        width: 100%;
+    }
+}
